<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Card Memorizer</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
	<string name="shuffled">Shuffled!</string>
	<string name="start">Start</string>
	<string name="restart">Restart</string>
	<string name="card_selection_dialog_title">Select the correct Rank and Suit.</string>
	<string name="cancel">Cancel</string>
	<string name="select">Select</string>
	<string name="next_level">Next Level</string>
	<string name="ace">A</string>
	<string name="two">2</string>
	<string name="four">4</string>
	<string name="three">3</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	<string name="ten">10</string>
	<string name="jack">J</string>
	<string name="queen">Q</string>
	<string name="king">K</string>
	<string name="hearts">Hearts</string>
	<string name="clubs">Clubs</string>
	<string name="diamonds">Diamonds</string>
	<string name="spades">Spades</string>
	<string name="new_game">New Game</string>
	<string name="main_menu">Main Menu</string>
	<string name="levels">Levels</string>
	<string name="about">About</string>
	<string name="custom_game">Custom</string>
	<string name="custom_game_start_title">The game can not be started.</string>
	<string name="custom_game_start_message">Please ensure you have selected at least one suit and rank.</string>
	<string name="ok">OK</string>
	<string name="copyright">\u00A9 2013 Passro inc. All Rights Reserved.</string>
	<string name="pick_suit">Select suits:</string>
	<string name="pick_rank">Select ranks:</string>
	<string name="pick_deck_size">Select deck size:</string>
	<string name="level">Level</string>
	<string name="select_level">Choose a Level</string>
	<string name="guesses">Guesses</string>

</resources>