<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <View
        android:id="@+id/center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/center"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <View
            android:id="@+id/top_space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="50sp" />
    </LinearLayout>

    <Button
        android:id="@+id/level_mode"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/center"
        android:layout_centerHorizontal="true"
        android:text="@string/levels" />

    <Button
        android:id="@+id/custom_mode"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/level_mode"
        android:layout_centerHorizontal="true"
        android:text="@string/custom_game" />

    <Button
        android:id="@+id/about"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/custom_mode"
        android:layout_centerHorizontal="true" 
        android:text="@string/about" />

</RelativeLayout>