<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/shuffled" />

        <HorizontalScrollView
            android:id="@+id/shuffled_layout_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hello_world" >

            <LinearLayout
                android:id="@+id/shuffled_card_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/selector_layout_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/shuffled_layout_container" >

            <LinearLayout
                android:id="@+id/selector_card_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/start"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@id/selector_layout_container"
            android:text="@string/start" />

        <Button
            android:id="@+id/select"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@id/start"
            android:layout_toRightOf="@id/start"
            android:text="@string/select" />
    </RelativeLayout>

</ScrollView>